2021-01-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Adjust file-internal function declarations.

	* datrie/fileutils.c
	  (parse_int16_be, serialize_int32_be, serialize_int16_be):
	  - Re-declare functions as static.
	* datrie/fileutils.c (parse_int16_be):
	  - Make the 'buff' arg const pointer.
	* datrie/fileutils.c:
	  - Remove some blank lines in source.

2021-01-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix documentation.

	* datrie/tail.h (Tail typedef):
	  - Fix comment (Double-array -> Tail).

2021-01-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Cosmetic changes.

	* datrie/fileutils.c:
	* datrie/trie-string.c:
	* datrie/alpha-map.c:
	* datrie/darray.h:
	* datrie/darray.c:
	* datrie/tail.h:
	* datrie/tail.c:
	* datrie/trie.c:
	* tools/trie-tool.c:
	* tests/test_serialization.c:
	  - Use space before left parenthesis.
	  - Use old-style C comments.
	  - Remove trailing spaces.
	  - Re-wrap lines.

2021-01-23  KOLANICH  <KOLANICH@users.noreply.github.com>

	Added serialization of the trie into a memory buffer.

	* datrie/fileutils.c
	  (file_write_int32, +serialize_int32,
	   file_write_int16, +serialize_int16,
	   file_read_int32, +parse_int32_be,
	   file_read_int16, +parse_int16_be):
	  - Split binary read/write operations into separate functions.
	* datrie/fileutils.h, datrie/fileutils.c
	  (+serialize_int32_be_incr, +serialize_int16_be_incr):
	  - Add serialization utility functions with pointer advancement.
	* datrie/trie-string.h, datrie/trie-string.c
	  (+trie_byte_strlen):
	  - Add utility method for calculating TrieChar string size in bytes.

	* datrie/alpha-map-private.h, datrie/alpha-map.c
	  (+alpha_map_get_serialized_size, +alpha_map_serialize_bin):
	  - Add AlphaMap serialization methods.
	* datrie/darray.h, datrie/darray.c
	  (+da_get_serialized_size, +da_serialize):
	  - Add DArray serialization methods.
	* datrie/tail.h, datrie/tail.c
	  (+tail_get_serialized_size, +tail_serialize):